<resources>
    <string name="app_name">Cupang Laundry</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Cupang Laundry</string>
    <string name="nav_header_subtitle">~Cuci Pakaian Gampang~</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="dev">Developer</string>
    <string name="devname">1. Jodi Penarosa/180709698\n
                            2. Sandi Hendrawan/180709959\n
                            3. Daniel Seto Dimas/180709978</string>
    <string name="lbl_alamat">Alamat</string>
    <string name="alamat"> Jalan Babarsari, Jl. Janti, Janti, Caturtunggal, Kec. Depok, Kabupaten Sleman, Daerah Istimewa Yogyakarta 55281</string>
    <string name="showinmap">Show in Map</string>

    <string name="menu_home">Laundry</string>
    <string name="menu_setrika">Setrika</string>
    <string name="menu_sepatu">Sepatu</string>
    <string name="menu_aboutus">About Us</string>
    <string name="menu_profile">Profile</string>

    <string name="search">Cari Id Order Laundry</string>
    <string name="title_home">List Order Laundry</string>

    <string name="addOrder">Tambah Order Laundry</string>
    <string name="updateOrder">Edit Order Laundry</string>

    <string name="lbl_email">Email</string>
    <string name="lbl_password">Password</string>

    <string name="signUp">SIGN UP</string>
    <string name="signIn">SIGN IN</string>
    <string name="nama">Nama Lengkap</string>

    <!--HINT FIELD-->
    <string name="jumlah">dalam satuan</string>
    <string name="berat">dalam kilogram</string>
    <string name="layanan">Jenis layanan</string>
    <string name="layanan_reguler">Reguler</string>
    <string name="layanan_kilat">Kilat</string>

    <!--LABEL ITEM ORDER-->
    <string name="lbl_no_id">No ID</string>
    <string name="lbl_tgl_masuk">Tanggal Masuk</string>
    <string name="lbl_jml_pakaian">Jumlah Pakaian</string>
    <string name="lbl_berat">Berat Total</string>
    <string name="lbl_layanan">Jenis Layanan</string>
    <string name="lbl_style">:</string>

    <string name="cancel">BATAL</string>
    <string name="add">TAMBAH</string>
    <string name="save">SIMPAN</string>
    <string name="delete">DELETE</string>

    <!--USER-->
    <string name="namaUser">Nama Lengkap</string>
    <string name="alamatUser">Alamat Lengkap</string>

    <string name="startnav">START NAVIGATION</string>
    <string name="editProfile">EDIT PROFILE</string>
    <string name="updateProfile">UPDATE PROFILE</string>

    <string name="mapbox_access_token">pk.eyJ1IjoiY3VwYW5nbGF1bmRyeSIsImEiOiJja2czcDkzYW4wY3VvMndubmczNDlvNjVqIn0.wspKQPW-AH_ep2IcEDjxyQ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>