<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.laundry.laundry.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_setrika"
        android:name="com.laundry.laundry.ui.setrika.SetrikaFragment"
        android:label="@string/menu_setrika"
        tools:layout="@layout/fragment_setrika" />

    <fragment
        android:id="@+id/nav_sepatu"
        android:name="com.laundry.laundry.ui.sepatu.SepatuFragment"
        android:label="@string/menu_sepatu"
        tools:layout="@layout/fragment_sepatu" />

    <fragment
        android:id="@+id/nav_aboutus"
        android:name="com.laundry.laundry.ui.about_us.AboutUsFragment"
        android:label="@string/menu_aboutus"
        tools:layout="@layout/fragment_aboutus" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.laundry.laundry.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>