<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="order"
            type="com.laundry.laundry.model.Order" />
        <variable
            name="frag"
            type="com.laundry.laundry.ui.home.UpdateFragment" />
    </data>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:background="@drawable/wphome"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.UpdateFragment">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:textAlignment="center"
            android:text="@string/updateOrder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">
            <TextView
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_jml_pakaian"
                android:layout_weight="1"
                android:layout_marginRight="4dp"/>
            <TextView
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_berat"
                android:layout_weight="1"
                android:layout_marginLeft="4dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_jumlah"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@={order.stringJumlah_pakaian}"
                    android:autofillHints=""
                    android:hint="@string/jumlah"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="4dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_berat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@={order.stringBerat}"
                    android:autofillHints=""
                    android:hint="@string/berat"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <TextView
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/layanan"
            android:layout_marginTop="16dp"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radioGroupUpdate_layanan">
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/radio_edit_reguler"
                android:text="@string/layanan_reguler"/>
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/radio_edit_kilat"
                android:text="@string/layanan_kilat"/>
        </RadioGroup>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnCancel"
                android:text="@string/cancel"
                android:layout_weight="0.8"
                android:layout_marginEnd="8dp"
                android:backgroundTint="#00BCD4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btnSave"
                android:text="@string/save"
                android:layout_weight="0.8"
                android:layout_marginEnd="8dp"
                android:backgroundTint="#2196F3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btnDelete"
                android:text="@string/delete"
                android:layout_weight="0.8"
                android:backgroundTint="#ED2B2A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>
</layout>