<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/wphome"
    android:padding="16dp"
    android:id="@+id/add_layout_ver"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setrika.AddSetrika">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:textAlignment="center"
        android:text="Tambah Order Setrika" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">
        <TextView
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_jml_pakaian"
            android:layout_weight="1"
            android:layout_marginRight="4dp"/>
        <TextView
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_berat"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="4dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etJumlah"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:hint="@string/jumlah"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etBerat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:hint="@string/berat"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <TextView
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Jenis Pakaian"
        android:layout_marginTop="16dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radioGroup_jenis">
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/radio_biasa"
            android:text="Biasa"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/radio_suede"
            android:text="Suede"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/radio_jersey"
            android:text="Jersey"/>
    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:text="@string/cancel"
            android:layout_weight="0.8"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#00BCD4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAdd"
            android:text="@string/add"
            android:layout_weight="0.8"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#2196F3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>