<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".SignInFragment"
    android:background="@drawable/wplogin">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/signIn_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp">

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/logo"
                    android:layout_margin="50dp"/>

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:textAlignment="center"
                    android:text="SIGN IN"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signIn_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:autofillHints=""
                        android:hint="@string/lbl_email"
                        android:inputType="textEmailAddress"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signIn_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:autofillHints=""
                        android:hint="@string/lbl_password"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/signIn"
                    android:layout_marginTop="105dp"/>
            </LinearLayout>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/signInProgressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:indeterminateTint="@color/colorPrimaryDark"
            android:visibility="gone"/>
    </FrameLayout>
</ScrollView>